kubernetes/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - name: grafana
          containerPort: 3000
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests: 
            memory: 500M
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
spec:
  selector: 
    app: grafana
  ports:
    - protocol: "TCP"
      port: 3000
      targetPort: 3000
      name: grafana
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls-grafana
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dashboard.ageguesser.com`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
  tls: # This route uses TLS
      certResolver: letsencrypt
      domains:
       - main: "dashboard.ageguesser.com"
         sans:
          - "*.dashboard.ageguesser.com"
